AC_INIT(configure.in)
AM_INIT_AUTOMAKE(dmtxd, 0.1)
AC_PREFIX_DEFAULT("/usr")
AM_CONFIG_HEADER(config.h)

CXXFLAGS=""
AC_SUBST(CXXFLAGS)
AC_PROG_CXX
AM_PROG_CC_STDC
AC_HEADER_STDC

PKG_CHECK_MODULES([BLUEZ], [bluez])

AC_PATH_LIBDMTX

AC_PATH_DBUS
AC_PATH_GLIB
AC_PATH_GDBUS
AC_PATH_BLUEZ

AC_OUTPUT([ Makefile
	    src/Makefile ])
